--- a/src/main/resources/templates/orders/Detail.html
+++ b/src/main/resources/templates/orders/Detail.html
@@ -71,6 +71,7 @@
               </div>
               <div class="d-flex justify-content-center mb-2">
                 <a th:href="@{'/orders/update/' + ${order.id}}" type="button" class="btn btn-primary">Редактировать</a>
+                <a th:href="@{'/orders/recalculate/' + ${order.id}}" type="button" class="btn btn-outline-warning ms-1">Пересчитать подробности</a>
                 <a th:href="@{'/orders/delete/' + ${order.id}}" type="button" class="btn btn-outline-danger ms-1">Удалить</a>
               </div>
             </div>
