--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -7,23 +7,23 @@
 <body>
       <div class="bg-white" id="sidebar-wrapper">
         <div class="list-group list-group-flush my-3">
-          <a th:href="@{'/clients/'}" class="list-group-item list-group-item-action bg-transparent second-text active">
-            <i class="fas fa-solid fa-address-book me-2"></i> Clients
+          <a th:href="@{'/clients/'}" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
+            <i class="fas fa-solid fa-address-book me-2"></i> Клиенты
           </a>
           <a th:href="@{'/managers/'}" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
-            <i class="fas fa-users me-2"></i> Managers
+            <i class="fas fa-users me-2"></i> Менеджеры
           </a>
           <a th:href="@{'/guardedobjects/'}" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
-            <i class="fas fa-shield-halved me-2"></i> GuardedObjects
+            <i class="fas fa-shield-halved me-2"></i> Охраняемые объекты
           </a>
           <a th:href="@{'/orders/'}" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
-            <i class="fas fa-file-shield me-2"></i> Orders
+            <i class="fas fa-file-shield me-2"></i> Договоры
           </a>
           <a th:href="@{'/orderdetails/'}" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
-            <i class="fas fa-file-lines me-2"></i> OrderDetails
+            <i class="fas fa-file-lines me-2"></i> Подробности договоров
           </a>
           <a th:href="@{'/services/'}" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
-            <i class="fas fa-project-diagram me-2"></i> Services
+            <i class="fas fa-project-diagram me-2"></i> Услуги
           </a>
         </div>
       </div>
