--- a/src/main/resources/templates/orders/Update.html
+++ b/src/main/resources/templates/orders/Update.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link  rel="stylesheet" th:href="@{/styles.css}">
-    <title>Договоры - Создание записи</title>
+    <title>Договоры - Обновление записи</title>
 </head>
 <body>
 <div class="d-flex" id="wrapper">
